Fixed Link and responsiveness problem

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 
   <!-- NAVIGATION -->
   <header class="navbar">
-    <div class="nav-container">
+    <nav class="nav-container">
       <h1 class="logo">FORGE <span>EVENTS</span></h1>
 
-    
-      <button class="buts home"><a href="#">Home</a></button>
-      <button class="buts events"><a href="#">Events</a></button>
-      <button class="buts my-events"><a href="#">MyEvents</a></button>
-      <button class="buts add"><a href="#">Add Event</a></button>
-    </div>
+      <ul class="links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">MyEvents</a></li>
+        <li><a href="#">Add Event</a></li>
+      </ul>
+      <div class="menu">
+        <img src="./social_icons/menu-black.svg">
+      </div>
+    </nav>
   </header>
 
   <!-- HERO SECTION -->
