Menu Functionality Added.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       <div class="menu">
         <img src="./social_icons/menu-black.svg">
       </div>
+
+      <!-- Menu List-->
+       <div class="menu-list">
+          <ul class="menu-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">MyEvents</a></li>
+            <li><a href="#">Add Event</a></li>            
+          </ul>
+       </div>
     </nav>
   </header>
 
@@ -186,6 +196,11 @@ Discover, join, and host events that bring people closer, create memories, and m
     <p>Tel: +233 (0)123 456 789 / +233 (0)987 654 321</p>
     <p>&copy; 2024 Forge Events. All rights reserved.</p>
   </section>
+
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
+
+
 
 </html>
